--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fastapi[standard] (>=0.115.11,<0.116.0)",
     "pydantic (>=2.10.6,<3.0.0)",
     "streamlit (==1.43.1)",
+    "google-genai"
 ]
 
 
